syntax = "proto3";

package user;

service UserService {
    rpc Create(User) returns (User);
    rpc GetUser(GetUserRequest) returns (User);
}
// message Empty {}

message User {
    int64 id = 1;
    string name = 2;
    string lastname = 3;
    repeated Product products = 4;
    int64 products_count = 5;
}

message Product {
    int64 id = 1;
    string name = 2;
    string model = 3;
    int64 owner_id = 4;
}

// message DeleteReq {
//     int64 id = 1;
// }

message GetUserRequest {
    int64 id = 1;
}